[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/loop/loop.properties
+++ b/xh/browser/chrome/browser/loop/loop.properties
@@ -225,6 +225,12 @@ peer_ended_conversation2=Umntu umtsalela umnxeba uyiyekisile incoko.
 conversation_has_ended=Incoko yakho ifikelele esiphelweni.
 restart_call=Phinda ujoyine
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+contact_unavailable_title={{contactName}} akekho
+generic_contact_unavailable_title=Umntu akekho.
+
 generic_failure_title=Kukho into engenzekanga kakuhle.
 generic_failure_with_reason2=Ungazama kwakhona okanye yenza imeyile yelinki apha ungafunyanwa khona emva kwethuba.
 generic_failure_no_reason2=Ungathanda ukuphinda uzame?
@@ -270,7 +276,7 @@ feedback_category_audio_quality=Umgangatho wesandi
 feedback_category_video_quality=umgangatho we-vido
 feedback_category_was_disconnected=uqhawulwe
 feedback_category_confusing=Iyabhida
-feedback_category_other=Okunye:
+feedback_category_other2=Okunye
 feedback_custom_category_text_placeholder=Yintoni engahambanga kakuhle
 feedback_submit_button=Ngenisa
 feedback_back_button=Emva
