--- a/xh/browser/chrome/browser/shellservice.properties
+++ b/xh/browser/chrome/browser/shellservice.properties
@@ -17,12 +17,14 @@ setDefaultBrowserNotNow.accesskey  = H
 setDefaultBrowserNever.label       = Ungaphindi undibuze
 setDefaultBrowserNever.accesskey   = U
 
-# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk, setDefaultBrowserAlertConfirm.label, setDefaultBrowserAlertNotNow.label):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
 setDefaultBrowserTitle=Ibhrawuza esisiseko
 setDefaultBrowserMessage=I%S ayisetwanga kungokunje njengebhrawuza esisiseko. Ungathanda ukuyenza ibhrawuza esisiseko?
 setDefaultBrowserDontAsk=Yiba soloko usenza olu qwalaselo xa uqalisa i-%S.
+setDefaultBrowserAlertConfirm.label=Sebenzisa %S njengebhrawuza yam yesiseko
+setDefaultBrowserAlertNotNow.label=Hayi ngoku
 
 desktopBackgroundLeafNameWin=Okungasemva Kolwazi Oluseskrinini.bmp
 DesktopBackgroundDownloading=Kugcinwa Umfanekiso…
