--- a/xh/dom/chrome/dom/dom.properties
+++ b/xh/dom/chrome/dom/dom.properties
@@ -157,57 +157,9 @@ DataContainerEventWarning=Ukusetyenziswa kweDataContainerEvent kwaliwe. Sebenzis
 SendAsBinaryWarning=Indlela engaqhelekanga ye-sendAsBinary yaliwe kwaye iza kususwa kungekudala. Sebenzisa indlela eqhelekileyo ye-send(Blob data) endaweni yayo.
 # LOCALIZATION NOTE: Do not translate "window.controllers"
 Window_ControllersWarning=i-window.controllers yaliwe. Musa ukuyisebenzisa ekukhangeleni i-UA.
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Down" and "ArrowDown".
-KeyNameDownWarning=KeyboardEvent.key value "Down" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi- "ArrowDown". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Left" and "ArrowLeft".
-KeyNameLeftWarning=KeyboardEvent.key value "Left" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi- "ArrowLeft".  Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Right" and "ArrowRight".
-KeyNameRightWarning=KeyboardEvent.key value "Right" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi- "ArrowRight". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Up" and "ArrowUp".
-KeyNameUpWarning=KeyboardEvent.key value "Up" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ArrowUp". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Crsel" and "CrSel".
-KeyNameCrselWarning=KeyboardEvent.key value "Crsel" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"CrSel". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Del" and "Delete".
-KeyNameDelWarning=KeyboardEvent.key value "Del" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Delete". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Exsel" and "ExSel".
-KeyNameExselWarning=KeyboardEvent.key value "Exsel" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ExSel". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Menu" and "ContextMenu".
-KeyNameMenuWarning=KeyboardEvent.key value "Menu" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ContextMenu". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Esc" and "Escape".
-KeyNameEscWarning=KeyboardEvent.key value "Esc" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Escape". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Nonconvert" and "NonConvert".
-KeyNameNonconvertWarning=KeyboardEvent.key value "Nonconvert" ayisebenzi kwaye iza kuthiywa ngokutsha  ibe yi-"NonConvert". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "HalfWidth" and "Hankaku".
-KeyNameHalfWidthWarning=KeyboardEvent.key value "HalfWidth" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Hankaku". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "RomanCharacters", "Romaji" and "Eisu".
-KeyNameRomanCharactersWarning=KeyboardEvent.key value "RomanCharacters" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Romaji" okanye itshintshelwe kwi-"Eisu". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FullWith" and "Zenkaku".
-KeyNameFullWidthWarning=KeyboardEvent.key value "FullWidth" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Zenkaku". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
-KeyNameSelectMediaWarning=KeyboardEvent.key value "SelectMedia" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaSelect". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaNextTrack" and "MediaTrackNext".
-KeyNameMediaNextTrackWarning=KeyboardEvent.key value "MediaNextTrack" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaTrackNext". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaPreviousTrack" and "MediaTrackPrevious".
-KeyNameMediaPreviousTrackWarning=KeyboardEvent.key value "MediaPreviousTrack" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaTrackPrevious". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Red" and "ColorF0Red".
-KeyNameRedWarning=KeyboardEvent.key value "Red" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF0Red". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Green" and "ColorF1Green".
-KeyNameGreenWarning=KeyboardEvent.key value "Green" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF1Green". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Yellow" and "ColorF2Yellow".
-KeyNameYellowWarning=KeyboardEvent.key value "Yellow" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF2Yellow". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Blue" and "ColorF3Blue".
-KeyNameBlueWarning=KeyboardEvent.key value "Blue" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF3Blue". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
-KeyNameLiveWarning=KeyboardEvent.key value "Live" ayisebenzi kwaye iza kushenxiswa. Fumana olunye uncedo  kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
-KeyNameAppsWarning=KeyboardEvent.key value "Apps" ayisebenzi kwaye iza kushenxiswa. Fumana olunye uncedo  kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
-KeyNameFastFwdWarning=KeyboardEvent.key value "FastFwd" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaFastForward". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
-KeyNameZoomWarning=KeyboardEvent.key value "Zoom" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ZoomToggle". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
-KeyNameDeadKeysWarning=KeyboardEvent.key values starting with "Dead" azisebenzi kwaye ziza kudityaniswa kwi-"Dead". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Ukuthunyelwa kweenowudi ze-XUL kuxwebhu lwesiqulatho kwaliwe. Le ndawo isenokushenxiswa kungekudala.
 XMLDocumentLoadPrincipalMismatch=Ukhuphelo lwamaxwebhu asuka kwezinye iifestile aluvumelekanga. Kuvumelekile ukunxibelelana kwi-Windows apho uxwebhu belenziwe khona kuphela.khuphela kolo xwebhu. Ngcono,sebenzisa XMLHttpRequest endaweni yoko.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=IndexedDB intengiselwano engakhange igqibeke iye yanqulunywa ngenxa yokufunisela iphepha.
+# LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeBudgetWarning=Izakutshintsha usetyenziso lwememori luphezulu kakhulu. Indawo ingqunywe %1$S iipikseli, uhlahlo-mali luxwebhu lwendawo engqunye ephindaphindwe ngo %2$S (%3$S iipikseli). Zonke izehlo zokutshintsha kuxwebhu azihoywa xa uhlahlo-mali lungaphezulu.
