[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/devtools/profiler.properties
+++ b/si/browser/chrome/browser/devtools/profiler.properties
@@ -17,20 +17,26 @@ profiler.label2=ක්‍රියාකාරීත්වය
 
 # LOCALIZATION NOTE (profiler.panelLabel):
 # This is used as the label for the toolbox panel.
+profiler.panelLabel2=ක්‍රියාකාරීත්ව පුවරුව
 
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
+profiler.commandkey2=VK_F5
+profiler.accesskey=P
 
 # LOCALIZATION NOTE (profiler.tooltip2):
 # This string is displayed in the tooltip of the tab when the profiler is
 # displayed inside the developer tools window.
+profiler.tooltip2=JavaScript පැතිකඩකරු
 
 # LOCALIZATION NOTE (noRecordingsText): The text to display in the
 # recordings menu when there are no recorded profiles yet.
+noRecordingsText=තවම කිසිඳු පැතිකඩක් නොමැත.
 
 # LOCALIZATION NOTE (recordingsList.itemLabel):
 # This string is displayed in the recordings list of the Profiler,
 # identifying a set of function calls.
+recordingsList.itemLabel=#%S පටිගත කරමින්
 
 # LOCALIZATION NOTE (recordingsList.recordingLabel):
 # This string is displayed in the recordings list of the Profiler,
@@ -62,6 +68,7 @@ graphs.fps=fps
 # This string is displayed in the flamegraph of the Profiler,
 # as the unit used to measure time (in milliseconds). This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.ms=ms
 
 # LOCALIZATION NOTE (category.*):
 # These strings are displayed in the categories graph of the Profiler,
@@ -74,20 +81,25 @@ category.gc=GC
 category.network=ජාලය
 category.graphics=පිංතූර
 category.storage=ගබඩාව
+category.events=ආදාන හා අවස්ථා
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
+table.root=(මූලය)
 
 # LOCALIZATION NOTE (table.url.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the url
 # labels which, when clicked, jump to the debugger.
+table.url.tooltiptext=දෝශ නිරාකරු තුළ මූලය පෙන්වන්න
 
 # LOCALIZATION NOTE (table.zoom.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the 'zoom'
 # buttons (small magnifying glass icons) which spawn a new tab.
+table.zoom.tooltiptext=නව ටැබයක රාමුව පිරික්සන්න
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
+recordingsList.saveDialogTitle=පැතිකඩ සුරකින්න...
 
 # LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a recording to disk.
