--- a/si/browser/chrome/browser/devtools/sourceeditor.properties
+++ b/si/browser/chrome/browser/devtools/sourceeditor.properties
@@ -52,6 +52,7 @@ annotation.debugLocation.title=වත්මන් පියවර: %S
 # LOCALIZATION NOTE  (autocompletion.docsLink): This is the text shown on
 # the link inside of the documentation popup.  If you type 'document' in Scratchpad
 # then press Shift+Space you can see the popup.
+autocompletion.docsLink=ලේඛන
 
 # LOCALIZATION NOTE  (autocompletion.notFound): This is the text shown in
 # the documentation popup if Tern fails to find a type for the object.
@@ -81,12 +82,15 @@ indentLess.commandkey=[
 # the Toolbox to switch between tools
 #
 # DO NOT translate this key without proper synchronization with toolbox.dtd.
+indentMore.commandkey=]
 
 # LOCALIZATION NOTE  (moveLineUp.commandkey): This is the key to use to move
 # the selected lines up.
+moveLineUp.commandkey=Alt-Up
 
 # LOCALIZATION NOTE  (moveLineDown.commandkey): This is the key to use to move
 # the selected lines down.
+moveLineDown.commandkey=Alt-Down
 
 # LOCALIZATION NOTE  (autocomplete.commandkey): This is the key to use
 # in conjunction with Ctrl for autocompletion.
@@ -94,3 +98,4 @@ autocompletion.commandkey=ඉඩ
 
 # LOCALIZATION NOTE  (showInformation2.commandkey): This is the key to use to
 # show more information, like type inference.
+showInformation2.commandkey=Shift-Ctrl-Space
