--- a/si/browser/chrome/browser/devtools/inspector.properties
+++ b/si/browser/chrome/browser/devtools/inspector.properties
@@ -14,6 +14,7 @@
 # LOCALIZATION NOTE (confirmNavigationAway): Used in the Inspector tool, when
 # the user tries to navigate away from a web page, to confirm the change of
 # page.
+confirmNavigationAway.message2=ඔබ මෙම පිටුවෙන් පිටවන්නේ නම්, සිදුකළ වෙනස්කම් අහිමිවනු ඇත.
 confirmNavigationAway.buttonLeave=පිටුව හැරයන්න
 confirmNavigationAway.buttonLeaveAccesskey=L
 confirmNavigationAway.buttonStay=පිටුවේ රැදී සිටින්න
