Bug 1118618 - [e10s] Slow script/plugin hang UI

--- a/sk/browser/chrome/browser/browser.properties
+++ b/sk/browser/chrome/browser/browser.properties
@@ -435,6 +435,11 @@ dataReportingNotification.message       = %1$S automaticky odosiela údaje spolo
 dataReportingNotification.button.label  = Zvoliť, aké údaje sa odosielajú
 dataReportingNotification.button.accessKey  = v
 
+# Process hang reporter
+processHang.message = Webová stránka zapríčiňuje, že %1$S reaguje pomaly. Čo chcete urobiť?
+processHang.button.label = Možnosti
+processHang.button.accessKey = M
+
 # Webapps notification popup
 webapps.install = Nainštalovať
 webapps.install.accesskey = N
