Bug 941287 - Show optimized out and other missing variables in the debugger variables view with the appropriate message

--- a/sk/browser/chrome/browser/devtools/debugger.properties
+++ b/sk/browser/chrome/browser/devtools/debugger.properties
@@ -316,4 +316,8 @@ functionSearchSeparatorLabel=←
 # resumed first.
 resumptionOrderPanelTitle=Niekoľko ladení je momentálne pozastavených. Najskôr musíte opätovne spustiť naposledy pozastavené ladenie pre %S
 
+variablesViewOptimizedOut=(optimalizované mimo)
+variablesViewUninitialized=(neinicializované)
+variablesViewMissingArgs=(nedostupné)
+
 evalGroupLabel=Vyhodnotené zdroje
