Bug 1119934 - Display (idle) nodes in the flamegraph for the new performance tool

--- a/sk/browser/chrome/browser/devtools/profiler.properties
+++ b/sk/browser/chrome/browser/devtools/profiler.properties
@@ -87,6 +87,10 @@ category.events=Vstup a udalosti
 # This string is displayed in the call tree for the root node.
 table.root=(hlavný)
 
+# LOCALIZATION NOTE (table.idle):
+# This string is displayed in the call tree for the idle blocks.
+table.idle=(nečinný)
+
 # LOCALIZATION NOTE (table.url.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the url
 # labels which, when clicked, jump to the debugger.
