--- a/sk/browser/chrome/browser/devtools/animationinspector.properties
+++ b/sk/browser/chrome/browser/devtools/animationinspector.properties
@@ -26,6 +26,11 @@ player.transitionNameLabel=Prechod
 # displayed before the animation duration.
 player.animationDurationLabel=Trvanie:
 
+# LOCALIZATION NOTE (player.animationDelayLabel):
+# This string is displayed in each animation player widget. It is the label
+# displayed before the animation delay.
+player.animationDelayLabel=Oneskorenie:
+
 # LOCALIZATION NOTE (player.animationIterationCountLabel):
 # This string is displayed in each animation player widget. It is the label
 # displayed before the number of times the animation is set to repeat.
