--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -95,6 +95,13 @@ add_or_import_contact_title=Pridanie alebo import kontaktu
 ## for where these appear on the UI
 import_contacts_button=Importovať
 importing_contacts_progress_button=Importuje sa…
+import_contacts_failure_message=Niektoré kontakty nemohli byť importované. Skúste to znova.
+## LOCALIZATION NOTE(import_contacts_success_message): Success notification message
+## when user's contacts have been successfully imported.
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+import_contacts_success_message=Celkom bol importovaný {{total}} kontakt.;Celkom boli importované {{total}} kontakty.;Celkom bolo importovaných {{total}} kontaktov.
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Synchronizovať kontakty
