[si] update from Pootle (firefox)

--- a/si/dom/chrome/layout/htmlparser.properties
+++ b/si/dom/chrome/layout/htmlparser.properties
@@ -3,12 +3,12 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # Encoding warnings and errors
-EncNoDeclarationFrame=The character encoding of a framed document was not declared. The document may appear different if viewed without the document framing it.
-EncNoDeclarationPlain=The character encoding of the plain text document was not declared. The document will render with garbled text in some browser configurations if the document contains characters from outside the US-ASCII range. The character encoding of the file needs to be declared in the transfer protocol or file needs to use a byte order mark as an encoding signature.
-EncLateMetaFrame=The character encoding declaration of the framed HTML document was not found when prescanning the first 1024 bytes of the file. When viewed without the document framing it, the page will reload automatically. The encoding declaration needs to be moved to be within the first 1024 bytes of the file.
-EncLateMeta=The character encoding declaration of the HTML document was not found when prescanning the first 1024 bytes of the file. When viewed in a differently-configured browser, this page will reload automatically. The encoding declaration needs to be moved to be within the first 1024 bytes of the file.
-EncLateMetaReload=The page was reloaded, because the character encoding declaration of the HTML document was not found when prescanning the first 1024 bytes of the file. The encoding declaration needs to be moved to be within the first 1024 bytes of the file.
-EncLateMetaTooLate=The character encoding declaration of document was found too late for it to take effect. The encoding declaration needs to be moved to be within the first 1024 bytes of the file.
+EncNoDeclarationFrame=එය සකස් ලේඛනයේ සංකේත කේතන ප්රකාශ කළේ නැහැ. එය රාමු දත්තගොනුව තොරව දැකිය නම් ලියවිල්ල වෙනස් ලෙස පෙනී යා හැකිය.
+EncNoDeclarationPlain=සාමාන්ය පාඨ ලේඛනයේ සංකේත කේතන ප්රකාශ කළේ නැහැ. දත්තගොනුව එක්සත් ජනපද- සැදි ASCII පරාසය පිටත සිට අකුරු අඩංගු නම් ලියවිල්ල සමහර බ්රවුසරයේ මානකරණයේ garbled පෙළ සමග විනිශ්චය කරනු ලැබේ. ගොනුවේ සංකේත කේතන ප්රොටොකෝලය හෝ ගොනුවේ වන්නාවූ කේතීකරණ අත්සන ලෙස බයිට පිණිස ලකුණ භාවිතා කිරීමට අවශ්ය මාරු කිරීමේ දී ප්රකාශයට පත් කළ යුතුය.
+EncLateMetaFrame=ගොනුවේ පළමු බයිට් 1024 prescanning විට Framed HTML ලේඛනයේ සංකේත කේතන ප්රකාශ සොයාගත නොහැකි විය. එය රාමු දත්තගොනුව තොරව දැකිය විට, පිටුව ස්වයංක්රීය අලුත් වේ. කේතනය ප්රකාශ ගොනුවේ පළමු බයිට් 1024 ක් තුළ විය වෙත ගෙන යා යුතු ය.
+EncLateMeta=ගොනුවේ පළමු බයිට් 1024 prescanning විට HTML ලේඛනයේ සංකේත කේතන ප්රකාශ සොයාගත නොහැකි විය. ආබාධ - වින්යාසගත බ්රවුසරයේ දැකිය විට, මෙම පිටුව ස්වයංක්රීයව අලුත් වේ. කේතනය ප්රකාශ ගොනුවේ පළමු බයිට් 1024 ක් තුළ විය වෙත ගෙන යා යුතු ය.
+EncLateMetaReload=ගොනුවේ පළමු බයිට් 1024 prescanning විට HTML ලේඛනයේ සංකේත කේතන ප්රකාශ සොයාගත නොහැකි විය නිසා මෙම පිටුව , Reloaded විය. කේතනය ප්රකාශ ගොනුවේ පළමු බයිට් 1024 ක් තුළ විය වෙත ගෙන යා යුතු ය.
+EncLateMetaTooLate=එය බලාත්මක වීමට ලේඛනයේ සංකේත කේතන ප්රකාශ පරක්කු සොයා ගෙන ඇත. කේතනය ප්රකාශ ගොනුවේ පළමු බයිට් 1024 ක් තුළ විය වෙත ගෙන යා යුතු ය.
 EncMetaUnsupported=An unsupported character encoding was declared for the HTML document using a meta tag. The declaration was ignored.
 EncProtocolUnsupported=An unsupported character encoding was declared on the transfer protocol level. The declaration was ignored.
 EncBomlessUtf16=Detected UTF-16-encoded Basic Latin-only text without a byte order mark and without a transfer protocol-level declaration. Encoding this content in UTF-16 is inefficient and the character encoding should have been declared in any case.
