--- a/si/dom/chrome/security/security.properties
+++ b/si/dom/chrome/security/security.properties
@@ -1,5 +1,7 @@
 # Mixed Content Blocker
 # LOCALIZATION NOTE: "%1$S" is the URI of the blocked mixed content resource
+BlockMixedDisplayContent = වාරණය කරන මිශ්ර සංදර්ශකය අන්තර්ගතයට පැටවීම "% 1 $ s "
+BlockMixedActiveContent = වාරණය කරන පැටවීම මිශ්ර සක්රිය අන්තර්ගතය "% 1 $ s "
 
 # CORS
 CrossSiteRequestBlocked=වාරණය කරන හරස් සම්භවය ඉල්ලීම: එකම සම්භවයකින් යුක්ත ප්රතිපත්තිය % 1 $ s ට දුරස්ථ සම්පත් කියවීම disallows . මෙම එකම වසම සඳහා සම්පත් , ගමන් කිරීමට හෝ CORS හැකිවන පරිදි විසින් නියම කළ හැකිය.
