--- a/si/security/manager/chrome/pipnss/nsserrors.properties
+++ b/si/security/manager/chrome/pipnss/nsserrors.properties
@@ -123,6 +123,8 @@ SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL feature not supported for SSL 2.0 c
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL feature not supported for servers.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL feature not supported for clients.
 SSL_ERROR_INVALID_VERSION_RANGE=SSL වෙළුම් පරාසය වලංගු නැත.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL සම තෝරාගත් ප්රොටොකෝලය අනුවාදය සඳහා ඉඩ ෙනොදිය වූ ​​කේතාංක සූට් තෝරා ගන්නා ලදී.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL ඉල්ලීම් අතට අත දීම පණිවිඩය තහවුරු කරන්න දෙනලද හෙලෝ ලැබී .
 SEC_ERROR_IO=ආරක්ෂණ අවසර ලබා දීමේදී I/O දෝෂයක් මතු විය.
 SEC_ERROR_LIBRARY_FAILURE=ආරක්ෂණ පුස්තකාලය අසමත් වීම.
 SEC_ERROR_BAD_DATA=ආරක්ෂණ පුස්තකාලය: නරක දත්ත ලැබුණි.
