[si] update from Pootle (firefox)

--- a/si/dom/chrome/xslt/xslt.properties
+++ b/si/dom/chrome/xslt/xslt.properties
@@ -19,8 +19,8 @@
 15 = XPath ව්යාකරණ විග්රහ අසාර්ථක : ') ' ' බලාපොරොත්තු :
 16 = XPath ව්යාකරණ විග්රහ අසාර්ථක : අවලංගු අක්ෂය :
 17 = XPath ව්යාකරණ විග්රහ අසාර්ථක : නම හෝ Nodetype ටෙස්ට් අපේක්ෂා :
-18 = XPath parse failure: ']' expected:
-19 = XPath parse failure: invalid variable name:
+18 = XPath ව්යාකරණ විග්රහ අසාර්ථක : '] ' අපේක්ෂා :
+19 = XPath ව්යාකරණ විග්රහ අසාර්ථක : අවලංගු විචල්ය නාමය :
 20 = XPath parse failure: unexpected end of expression:
 21 = XPath parse failure: operator expected:
 22 = XPath parse failure: unclosed literal:
