--- a/si/security/manager/chrome/pippki/pippki.properties
+++ b/si/security/manager/chrome/pippki/pippki.properties
@@ -76,8 +76,10 @@ pageInfo_Privacy_None3=ඔබ පිරික්සන පිටුව සංක
 # LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=සම්බන්ධතාවය සංකේතාංකනයකර අැත(%1$S, %2$S bit keys, %3$S)
 pageInfo_Privacy_Encrypted1=ඔබ බලමින් සිටන පිටුව අන්තර්ජාලය හරහා යැවීමට පෙර සංකේතාංකනය කළ එකකි.
 pageInfo_MixedContent=සබධතාවය අර්‍ධවශයෙන් සංකේතාංකනය කර ඇත
+pageInfo_Privacy_Broken1=ඔබ භාවිත කළ පිටුවේ අමතර කොටස් සංකේතාත්මක නැහැ හෝ ගුප්ත කේතනය අන්තර්ජාලය හරහා යැවීමට පෙර තරම් ශක්තිමත් නොවේ ලදී.
 
 #Cert Viewer
 certDetails=සහතික දර්ශනය:
@@ -144,7 +146,9 @@ writeFileUnknownError=නොදන්නා දෝෂය
 addExceptionBrandedWarning2=You are about to override how %S identifies this site.
 addExceptionInvalidHeader=මෙම අඩවිය සාවද්‍ය දත්ත මගිවන හදුනාගැනීමට උත්සාහ කරයි.
 addExceptionDomainMismatchShort=වැරදි අඩවියක්
+addExceptionDomainMismatchLong2=සහතිකය යම් අයෙකු විසින් මෙම වෙබ් අඩවිය නොමග යැවීමට තැත් කරන බව අදහස් හැකි වෙනස් වෙබ් අඩවිය , අයත් ය.
 addExceptionExpiredShort=කල් ඉකුත්වූ දත්ත
+addExceptionExpiredLong2=සහතිකය දැනට වලංගු නැත . සොරකම් කළ හෝ නැති වූ අතර, මෙම වෙබ් අඩවිය වෙනත් පුද්ගලයින්ගේ ගමන් බලපත්ර ළඟ තබාගෙන කෙනෙකු විසින් ඒවා භාවිතා කරනු ලැබිය හැකි වී ඇති විය හැක.
 addExceptionUnverifiedOrBadSignatureShort=නොදන්නා අනන්‍යතාවක්
 addExceptionValidShort=වලංගු සහතිකයක්
 addExceptionValidLong=මෙම අඩවිය නිරවද්‍ය, සත්‍යාපනය කළ හදුනාගැනීමක් ලබාදේ. හැරදැමීමක් එක් කිරීමට අවශ්‍ය නැත.
