--- a/si/dom/chrome/layout/htmlparser.properties
+++ b/si/dom/chrome/layout/htmlparser.properties
@@ -9,10 +9,10 @@ EncLateMetaFrame=ගොනුවේ පළමු බයිට් 1024 prescannin
 EncLateMeta=ගොනුවේ පළමු බයිට් 1024 prescanning විට HTML ලේඛනයේ සංකේත කේතන ප්රකාශ සොයාගත නොහැකි විය. ආබාධ - වින්යාසගත බ්රවුසරයේ දැකිය විට, මෙම පිටුව ස්වයංක්රීයව අලුත් වේ. කේතනය ප්රකාශ ගොනුවේ පළමු බයිට් 1024 ක් තුළ විය වෙත ගෙන යා යුතු ය.
 EncLateMetaReload=ගොනුවේ පළමු බයිට් 1024 prescanning විට HTML ලේඛනයේ සංකේත කේතන ප්රකාශ සොයාගත නොහැකි විය නිසා මෙම පිටුව , Reloaded විය. කේතනය ප්රකාශ ගොනුවේ පළමු බයිට් 1024 ක් තුළ විය වෙත ගෙන යා යුතු ය.
 EncLateMetaTooLate=එය බලාත්මක වීමට ලේඛනයේ සංකේත කේතන ප්රකාශ පරක්කු සොයා ගෙන ඇත. කේතනය ප්රකාශ ගොනුවේ පළමු බයිට් 1024 ක් තුළ විය වෙත ගෙන යා යුතු ය.
-EncMetaUnsupported=An unsupported character encoding was declared for the HTML document using a meta tag. The declaration was ignored.
-EncProtocolUnsupported=An unsupported character encoding was declared on the transfer protocol level. The declaration was ignored.
-EncBomlessUtf16=Detected UTF-16-encoded Basic Latin-only text without a byte order mark and without a transfer protocol-level declaration. Encoding this content in UTF-16 is inefficient and the character encoding should have been declared in any case.
-EncMetaUtf16=A meta tag was used to declare the character encoding as UTF-16. This was interpreted as an UTF-8 declaration instead.
+EncMetaUnsupported=සහාය නොදක්වන සංකේත කේතන වූ මෙටා ටැග් භාවිතා සුරකීම ලේඛනයක් සඳහා ප්රකාශයට පත් කරන ලදී. ප්රකාශය නොසලකා හරින ලදී.
+EncProtocolUnsupported=සහාය නොදක්වන සංකේත කේතන මාරු ප්රොටොකෝලය මට්ටමින් ප්රකාශයට පත් කරන ලදී. ප්රකාශය නොසලකා හරින ලදී.
+EncBomlessUtf16=එය බයිට පිණිස ලකුණ කිරීමක් නො කර සහ මාරු ප්රොටොකෝලය මට්ටමේ ප්රකාශ තොරව තිබීමද UTF -16 - කේතාංකනය මූලික ලතින් පමණක් පෙළ ගැනිනි. මගින් utf- 16 මෙම අන්තර්ගතය කේතනය අකාර්යක්ෂම වන අතර සංකේත කේතන ඕනෑම නඩු ප්රකාශයට පත් කර කර තිබිය යුතුය.
+EncMetaUtf16=ඒ මෙටා ටැග් තිබීමද UTF -16 ලෙස සංකේත කේතන ප්රකාශ කිරීම සඳහා භාවිතා කරන ලදී. මෙම වෙනුවට UTF-8 වෙත ප්රකාශයක් ලෙස අර්ථ නිරූපනය කරන ලදී.
 EncMetaUserDefined=ඒ මෙටා ටැග් X -user- අර්ථ දක්වා ඇති සංකේත කේතන ප්රකාශ කිරීම සඳහා භාවිතා කරන ලදී. මෙම වෙනුවට හිතාමතාම අනිසි කේතාංකනය උරුමය අකුරු වර්ග සමග ගැළපුම සඳහා කවුළු - 1252 ප්රකාශයක් ලෙස අර්ථ නිරූපනය කරන ලදී. මෙම වෙබ් අඩවිය සිංහල යුනිකෝඩ් සංක්රමණය විය යුතුය.
 
 # The bulk of the messages below are derived from 
@@ -20,9 +20,9 @@ EncMetaUserDefined=ඒ මෙටා ටැග් X -user- අර්ථ දක්
 # which is available under the MIT license.
 
 # Tokenizer errors
-errGarbageAfterLtSlash=Garbage after “</”.
-errLtSlashGt=Saw “</>”. Probable causes: Unescaped “<” (escape as “&lt;”) or mistyped end tag.
-errCharRefLacksSemicolon=Character reference was not terminated by a semicolon.
+errGarbageAfterLtSlash="< / " පසුව අනවෂ‍්‍යය අගයන් ඇත.
+errLtSlashGt="< /> " දුටුවා. අනුමාන හේතු : Unescaped "< " ( ලෙස පැන "&lt;" ) හෝ අකුරු වරදවා සටහන් කර අවසන් ටැගය .
+errCharRefLacksSemicolon=අක්ෂර සඳහනක් , semicolon විසින් සේවයෙන් ඉවත් නොහැකි විය.
 errNoDigitsInNCR=No digits in numeric character reference.
 errGtInSystemId=“>” in system identifier.
 errGtInPublicId=“>” in public identifier.
