--- a/sq/browser/chrome/browser/shellservice.properties
+++ b/sq/browser/chrome/browser/shellservice.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 optionsLabel=&Mundësi %S-i
-safeModeLabel=%S në Mënyrë të &Sigurt
+safeModeLabel=%S nën Mënyrën e &Parrezik
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
