--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -57,7 +57,7 @@ addonErrorBlocklisted=#1 nuk u instalua dot, ngaqë përbën rrezik të madh pë
 
 # Notifications
 notificationRestart.normal=Riniseni që të plotësohen ndryshimet.
-notificationRestart.blocked=U instaluan shtesa të pasigurta. Riniseni që të çaktivizohen.
+notificationRestart.blocked=U instaluan shtesa jo të parrezik. Riniseni që të çaktivizohen.
 notificationRestart.button=Riniseni
 
 # Popup Blocker
