--- a/sq/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sq/security/manager/chrome/pipnss/nsserrors.properties
@@ -178,7 +178,7 @@ SEC_ERROR_READ_ONLY=librari sigurie: bazë të dhënash vetëm për lexim.
 SEC_ERROR_NO_SLOT_SELECTED=Nuk u përzgjodh "slot" ose "token".
 SEC_ERROR_CERT_NICKNAME_COLLISION=Ka tashmë një dëshmi me të njëjtën nofkë.
 SEC_ERROR_KEY_NICKNAME_COLLISION=Ka tashmë një kyç me të njëjtën nofkë.
-SEC_ERROR_SAFE_NOT_CREATED=gabim gjatë krijimit të objektit të sigurt
+SEC_ERROR_SAFE_NOT_CREATED=gabim gjatë krijimit të objektit të parrezik
 SEC_ERROR_BAGGAGE_NOT_CREATED=gabim gjatë krijimit të objektit bagazh
 XP_JAVA_REMOVE_PRINCIPAL_ERROR=S’hoqi dot kryesorin
 XP_JAVA_DELETE_PRIVILEGE_ERROR=S’fshiu dot privilegjin
