--- a/sq/security/manager/chrome/pipnss/pipnss.properties
+++ b/sq/security/manager/chrome/pipnss/pipnss.properties
@@ -276,7 +276,7 @@ DelModuleIntSuccess=U fshi me sukses modul i brendshëm sigurie
 DelModuleExtSuccess=U fshi me sukses modul i jashtëm sigurie
 ForcedBackup1=Duhet të bëni një kopje kopjeruajtëse të mbrojtur me fjalëkalim të dëshmisë suaj të re për sigurinë dhe të kyçeve private shoqëruese.
 ForcedBackup2=Nëse humbni ndonjëherë mundësinë për të hyrë te kyçi juaj privat duke harruar fjalëkalimin privat të sigurisë, ose për shkak dëmtimi kartele, mund të riktheni prej kësaj kopjeje kopjeruajtëse kyçin privat dhe dëshminë.
-ForcedBackup3=Për të bërë një kopje, klikoni OK. Nëse mundet, duhet të ruani një kopje të kopjeruajtes tuaj në disketë, të cilën ta ruani në një vend të sigurt.
+ForcedBackup3=Për të bërë një kopje, klikoni OK. Nëse mundet, duhet të ruani një kopje të kopjeruajtes tuaj në disketë, të cilën ta ruani në një vend të parrezik.
 UnknownCertIssuer=(Lëshues i Panjohur)
 UnknownCertOrg=(Organizëm i Panjohur)
 AVATemplate=%S = %S
