--- a/sq/toolkit/chrome/search/search.properties
+++ b/sq/toolkit/chrome/search/search.properties
@@ -4,7 +4,7 @@
 
 addEngineConfirmTitle=Shtoni Motor Kërkimesh
 addEngineConfirmation=Të shtohet "%S" te lista e motorëve të mundshëm dhe që duken te shtylla e kërkimeve?\n\nPrej: %S
-addEngineAsCurrentText=Bëje këtë motorin e kërkimeve për tani
+addEngineAsCurrentText=Bëje motorin e kërkimeve për tani
 addEngineAddButtonLabel=Shtoje
 
 error_loading_engine_title=Gabim Shkarkimi
