--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -138,7 +138,7 @@ pluginActivate.updateLabel=Përditësojeni tani…
 # LOCALIZATION NOTE (pluginActivateVulnerable.message, pluginActivateVulnerable.label):
 # These strings are used when an unsafe plugin has no update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
-pluginActivateVulnerable.message=%3$S-i e ka penguar shtojcën e pasigurt "%1$S" të xhirojë në %2$S.
+pluginActivateVulnerable.message=%3$S-i e ka penguar shtojcën jo të parrezik "%1$S" të xhirojë në %2$S.
 pluginActivateVulnerable.label=Shtojcë e cenueshme!
 pluginActivate.riskLabel=Ç’rrezik ka?
 # LOCALIZATION NOTE (pluginActivateBlocked.message): %1$S is the plugin name, %2$S is brandShortName
@@ -149,7 +149,7 @@ pluginActivateDisabled.label=E çaktivizuar
 pluginActivateDisabled.manage=Administroni shtojca…
 pluginEnabled.message="%S" është e aktivizuar në %S.
 pluginEnabledOutdated.message=Shtojca e vjetruar "%S" është e aktivizuar në %S.
-pluginEnabledVulnerable.message=Shtojca e pasigurt "%S" është e kativizuar në %S.
+pluginEnabledVulnerable.message=Shtojca e pasigurt "%S" është e aktivizuar në %S.
 pluginInfo.unknownPlugin=E panjohur
 
 # LOCALIZATION NOTE (pluginActivateNow.label, pluginActivateAlways.label, pluginBlockNow.label): These should be the same as the matching strings in browser.dtd
