--- a/sq/browser/installer/custom.properties
+++ b/sq/browser/installer/custom.properties
@@ -11,7 +11,7 @@ SUMMARY_UPGRADE_CLICK=Që të vazhdohet, klikoni mbi Përmirësoje.
 # Verify that the access key for InstallBtn (in override.properties) and
 # UPGRADE_BUTTON is not already used by SUMMARY_TAKE_DEFAULTS.
 UPGRADE_BUTTON=&Përmirësoje
-REG_APP_DESC=$BrandShortName-i sjell shfletim web të sigurt dhe të lehtë. Një ndërfaqe përdoruesi familjare, veçori sigurie të thelluar, përfshi mbrojtjen prej përvetësimesh të identitetit në linjë, dhe kërkim i integruar ju lejojnë të përfitoni maksimumin prej web-it.
+REG_APP_DESC=$BrandShortName-i sjell shfletim web të parrezik dhe të lehtë. Një ndërfaqe përdoruesi familjare, veçori sigurie të thelluar, përfshi mbrojtjen prej përvetësimesh të identitetit në linjë, dhe kërkim i integruar ju lejojnë të përfitoni maksimumin prej web-it.
 OPTIONS_PAGE_TITLE=Lloj Rregullimi
 OPTIONS_PAGE_SUBTITLE=Zgjidhni mundësi rregullimi
 SHORTCUTS_PAGE_TITLE=Caktoni Shkurtore
@@ -62,4 +62,4 @@ SUMMARY_REBOOT_REQUIRED_UNINSTALL=Që të plotësohet çinstalimi, mund të nevo
 ERROR_CREATE_DIRECTORY_PREFIX=Gabim gjatë krijimit të drejtorisë:
 ERROR_CREATE_DIRECTORY_SUFFIX=Që të ndalet instalimi, klikoni mbi Anuloje,\nRiprovo, për të provuar sërish.
 CONTEXT_OPTIONS=&Mundësi $BrandShortName-i
-CONTEXT_SAFE_MODE=Mënyrë e &Sigurt për $BrandShortName-in
+CONTEXT_SAFE_MODE=Mënyrë e &Parrezik për $BrandShortName-in
