--- a/sq/dom/chrome/appstrings.properties
+++ b/sq/dom/chrome/appstrings.properties
@@ -28,7 +28,7 @@ externalProtocolChkMsg=Mba mend zgjedhjen time për tërë lidhjet e këtij lloj
 externalProtocolLaunchBtn=Nisni aplikacionin
 malwareBlocked=Sajti te %S është raportuar si një sajt sulmesh dhe është bllokuar duke u bazuar në parapëlqimet tuaja të sigurisë.
 phishingBlocked=Sajti te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
-unsafeContentType=Faqja që po përpiqeni të shihni nuk shfaqet dot, ngaqë gjendet brenda një lloji kartelash hapja e të cilave mund të mos jetë e sigurt. Ju lutemi, lidhuni me të zotët e sajtit për t’u bërë të ditur këtë problem.
+unsafeContentType=Faqja që po përpiqeni të shihni nuk shfaqet dot, ngaqë gjendet brenda një lloji kartelash, hapja e të cilave mund të mos jetë e parrezik. Ju lutemi, lidhuni me të zotët e sajtit për t’u bërë të ditur këtë problem.
 cspBlocked=Kjo faqe përmban një rregull sigurie lënde që pengon ngarkimin e saj në këtë mënyrë.
 corruptedContentError=Faqja që po përpiqeni të shihni nuk mund të shfaqet, ngaqë u kap një gabim në transmetimin e të dhënave.
 remoteXUL=Kjo faqe përdor një teknologji të pambuluar që nuk është më pjesë si parazgjedhje.
