[si] update from Pootle (firefox)

--- a/si/dom/chrome/layout/htmlparser.properties
+++ b/si/dom/chrome/layout/htmlparser.properties
@@ -5,6 +5,7 @@
 # Encoding warnings and errors
 EncNoDeclarationFrame=එය සකස් ලේඛනයේ සංකේත කේතන ප්රකාශ කළේ නැහැ. එය රාමු දත්තගොනුව තොරව දැකිය නම් ලියවිල්ල වෙනස් ලෙස පෙනී යා හැකිය.
 EncNoDeclarationPlain=සාමාන්ය පාඨ ලේඛනයේ සංකේත කේතන ප්රකාශ කළේ නැහැ. දත්තගොනුව එක්සත් ජනපද- සැදි ASCII පරාසය පිටත සිට අකුරු අඩංගු නම් ලියවිල්ල සමහර බ්රවුසරයේ මානකරණයේ garbled පෙළ සමග විනිශ්චය කරනු ලැබේ. ගොනුවේ සංකේත කේතන ප්රොටොකෝලය හෝ ගොනුවේ වන්නාවූ කේතීකරණ අත්සන ලෙස බයිට පිණිස ලකුණ භාවිතා කිරීමට අවශ්ය මාරු කිරීමේ දී ප්රකාශයට පත් කළ යුතුය.
+EncNoDeclaration=HTML ගැන අක්ෂර සංකේතනයක් කේතන නිවේශනය කර නොමැත. ලේඛනය US-ASCII පරාසයෙන් පබැහැර අක්ෂර වලින් යුක්ත නම් ඇතැම් ගවේශන සැකසුම් වලදී අවුල් වූ පෙළ ජනනය කරනු ඇත. පිටුවේ සංකේතනය ලේඛනය තුළ හෝ හුවමාරු නාමාවලිය තුළ නිවේශනය කළ යුතුයි.
 EncLateMetaFrame=ගොනුවේ පළමු බයිට් 1024 prescanning විට Framed HTML ලේඛනයේ සංකේත කේතන ප්රකාශ සොයාගත නොහැකි විය. එය රාමු දත්තගොනුව තොරව දැකිය විට, පිටුව ස්වයංක්රීය අලුත් වේ. කේතනය ප්රකාශ ගොනුවේ පළමු බයිට් 1024 ක් තුළ විය වෙත ගෙන යා යුතු ය.
 EncLateMeta=ගොනුවේ පළමු බයිට් 1024 prescanning විට HTML ලේඛනයේ සංකේත කේතන ප්රකාශ සොයාගත නොහැකි විය. ආබාධ - වින්යාසගත බ්රවුසරයේ දැකිය විට, මෙම පිටුව ස්වයංක්රීයව අලුත් වේ. කේතනය ප්රකාශ ගොනුවේ පළමු බයිට් 1024 ක් තුළ විය වෙත ගෙන යා යුතු ය.
 EncLateMetaReload=ගොනුවේ පළමු බයිට් 1024 prescanning විට HTML ලේඛනයේ සංකේත කේතන ප්රකාශ සොයාගත නොහැකි විය නිසා මෙම පිටුව , Reloaded විය. කේතනය ප්රකාශ ගොනුවේ පළමු බයිට් 1024 ක් තුළ විය වෙත ගෙන යා යුතු ය.
@@ -128,3 +129,4 @@ errSelfClosing=Self-closing syntax (“/>”) used on a non-void HTML element. I
 errNoCheckUnclosedElementsOnStack=Unclosed elements on stack.
 errEndTagDidNotMatchCurrentOpenElement=End tag “%1$S” did not match the name of the current open element (“%2$S”).
 errEndTagViolatesNestingRules=End tag “%1$S” violates nesting rules.
+errEndWithUnclosedElements="%1$S" දැකීම සඳහා අවසන් ටැගය, නමුත් එහි නොවැසූ මූලාංග පවතී.
