--- a/si/security/manager/chrome/pippki/pippki.properties
+++ b/si/security/manager/chrome/pippki/pippki.properties
@@ -78,6 +78,7 @@ pageInfo_Privacy_None3=ඔබ පිරික්සන පිටුව සංක
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
 pageInfo_EncryptionWithBitsAndProtocol=සම්බන්ධතාවය සංකේතාංකනයකර අැත(%1$S, %2$S bit keys, %3$S)
 pageInfo_Privacy_Encrypted1=ඔබ බලමින් සිටන පිටුව අන්තර්ජාලය හරහා යැවීමට පෙර සංකේතාංකනය කළ එකකි.
+pageInfo_Privacy_Encrypted2=සංකේතාන්කනය පරිගණක දෙකක් අතර හුවමාරු වන දත්ත අවසර නොලත් පුද්ගලයින්ට කියවීම ඉතා අපහසු වේ. එමනිසා ජාලය හරහා පිටුව ගමන් කිරීමේදි කිසිවෙකුට කියවිමේ හැකියාවක් නැත.
 pageInfo_MixedContent=සබධතාවය අර්‍ධවශයෙන් සංකේතාංකනය කර ඇත
 pageInfo_Privacy_Broken1=ඔබ භාවිත කළ පිටුවේ අමතර කොටස් සංකේතාත්මක නැහැ හෝ ගුප්ත කේතනය අන්තර්ජාලය හරහා යැවීමට පෙර තරම් ශක්තිමත් නොවේ ලදී.
 
@@ -150,10 +151,13 @@ addExceptionDomainMismatchLong2=සහතිකය යම් අයෙකු ව
 addExceptionExpiredShort=කල් ඉකුත්වූ දත්ත
 addExceptionExpiredLong2=සහතිකය දැනට වලංගු නැත . සොරකම් කළ හෝ නැති වූ අතර, මෙම වෙබ් අඩවිය වෙනත් පුද්ගලයින්ගේ ගමන් බලපත්ර ළඟ තබාගෙන කෙනෙකු විසින් ඒවා භාවිතා කරනු ලැබිය හැකි වී ඇති විය හැක.
 addExceptionUnverifiedOrBadSignatureShort=නොදන්නා අනන්‍යතාවක්
+addExceptionUnverifiedOrBadSignatureLong2=හඳුනාගත් බලධාරියකුගෙන් හෝ ආරක්ශාකාරී අත්සනකින් තහවුරු කර නොමැති බැවින්, සහතිකය විශ්වාස කළ නොහැක.
 addExceptionValidShort=වලංගු සහතිකයක්
 addExceptionValidLong=මෙම අඩවිය නිරවද්‍ය, සත්‍යාපනය කළ හදුනාගැනීමක් ලබාදේ. හැරදැමීමක් එක් කිරීමට අවශ්‍ය නැත.
 addExceptionCheckingShort=තොරතුරු පිරික්සමින්
+addExceptionCheckingLong2=අඩවිය හදුනා ගැනීමට උත්සාහ කරමින්…
 addExceptionNoCertShort=තොරතුරු නැත
+addExceptionNoCertLong2=ලබා දුන් අඩවිය සඳහා හදුනා ගැනිමේ තත්ත්වය ලබා ගත නොහැකි විය.
 addExceptionConnectionFailed=සම්බන්ධතාවය බිදවැටින
 
 #Certificate Exists in database
