[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/devtools/inspector.properties
+++ b/si/browser/chrome/browser/devtools/inspector.properties
@@ -24,6 +24,7 @@ breadcrumbs.siblings=Siblings
 
 # LOCALIZATION NOTE (debuggerPausedWarning): Used in the Inspector tool, when
 # the user switch to the inspector when the debugger is paused.
+debuggerPausedWarning.message=දෝශ නිරාකරණය නැවතිනි. මවුස තෝරාගැනීම වැනි ඇතැම් විශේෂාංග ක්‍රියා නොකරනු ඇත.
 
 # LOCALIZATION NOTE (nodeMenu.tooltiptext)
 # This menu appears in the Infobar (on top of the highlighted node) once
@@ -32,15 +33,24 @@ nodeMenu.tooltiptext=Node operations
 
 # LOCALIZATION NOTE (inspector.*)
 # Used for the menuitem in the tool menu
+inspector.label=පරීක්ෂකය (I)
 inspector.commandkey=C
+inspector.accesskey=I
 
 # LOCALIZATION NOTE (inspector.panelLabel.*)
 # Labels applied to the panel and views within the panel in the toolbox
+inspector.panelLabel=පරීක්ෂක පුවරුව
+inspector.panelLabel.markupView=සලකුණු දසුන
 
 # LOCALIZATION NOTE (markupView.more.*)
 # When there are too many nodes to load at once, we will offer to
 # show all the nodes.
+markupView.more.showing=ඇතැම් නෝඩ සැඟවිනි
+markupView.more.showAll=සියළු %S නෝඩ පෙන්වන්න
+inspector.tooltip=DOM හා මෝස්තර පරීක්ෂක
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
+previewTooltip.image.brokenImage=පිළිබිඹුව පූර්ණය කළ නොහැකි විය
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
+eventsTooltip.openInDebugger=දෝශ නිරාකරණය තුළ විවෘත කරන්න
