[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/devtools/gclicommands.properties
+++ b/si/browser/chrome/browser/devtools/gclicommands.properties
@@ -110,14 +110,18 @@ screenshotFullPageManual=True if the screenshot should also include parts of the
 
 # LOCALIZATION NOTE (screenshotSavedToFile) Text displayed to user when the
 # screenshot is successfully saved to the file specified.
+screenshotSavedToFile=සුරැකුනේ
 
 # LOCALIZATION NOTE (screenshotErrorCopying) Text displayed to user upon
 # encountering error while copying the screenshot to clipboard.
+screenshotErrorCopying=පසුරු පුවරුවට පිටපත්කිරීමේ දෝශයක්
 
 # LOCALIZATION NOTE (screenshotCopied) Text displayed to user when the
 # screenshot is successfully copied to the clipboard.
+screenshotCopied=පසුරු පුවරුවට පිටපත් විය.
 
 # LOCALIZATION NOTE (screenshotTooltip) Text displayed as tooltip for screenshot button in devtools ToolBox.
+screenshotTooltip=සම්පූර්ණපිටු තිර සටහනක් ලබන්න
 
 # LOCALIZATION NOTE (highlightDesc) A very short description of the
 # 'highlight' command. See highlightManual for a fuller description of what
@@ -130,6 +134,7 @@ screenshotFullPageManual=True if the screenshot should also include parts of the
 # LOCALIZATION NOTE (highlightSelectorDesc) A very short string to describe
 # the 'selector' parameter to the 'highlight' command, which is displayed in
 # a dialog when the user is using this command.
+highlightSelectorDesc=CSS තේරීම
 
 # LOCALIZATION NOTE (highlightSelectorManual) A fuller description of the
 # 'selector' parameter to the 'highlight' command, displayed when the user
