--- a/si/browser/chrome/browser/devtools/gcli.properties
+++ b/si/browser/chrome/browser/devtools/gcli.properties
@@ -30,6 +30,8 @@ canonDefaultGroupName=වරණයන්
 # LOCALIZATION NOTE (canonProxyDesc, canonProxyManual): These commands are
 # used to execute commands on a remote system (using a proxy). Parameters: %S
 # is the name of the remote system.
+canonProxyDesc=%S මත විධානයක් ක්‍රියාත්මක කරන්න
+canonProxyManual=දුරස්ථ පද්ධතියක් මත ක්‍රියාත්මක වන විධාන කට්ටලයක්. දුරස්ථ පද්ධතියට ලඟාවන්නේ %S හරහායි
 
 # LOCALIZATION NOTE: This error message is displayed when we try to add a new
 # command (using a proxy) where one already exists with the same name.
@@ -41,6 +43,7 @@ cliEvalJavascript=JavaScript සෘජුව ඇතුළත් කරන්න
 
 # LOCALIZATION NOTE: This message is displayed when the command line has more
 # arguments than the current command can understand.
+cliUnusedArg=අධික විස්තාරක
 
 # LOCALIZATION NOTE: The title of the dialog which displays the options that
 # are available to the current command.
@@ -48,6 +51,7 @@ cliOptions=දැනට ඇති විකල්ප
 
 # LOCALIZATION NOTE: The error message when the user types a command that
 # isn't registered
+cliUnknownCommand=වැරදි විධානයක්
 
 # LOCALIZATION NOTE: A parameter should have a value, but doesn't
 cliIncompleteParam='%1$S' සදඟා අවශ්‍ය අගය.
@@ -74,10 +78,12 @@ fileErrIsNotDirectory='%1$S' බහාලුමක් නොවේ
 # LOCALIZATION NOTE: Error message given when a file argument does not match
 # the specified regular expression %1$S is a filename %2$S is a regular
 # expression
+fileErrDoesntMatch='%1$S' සමඟ '%2$S' නොගැලපේ
 
 # LOCALIZATION NOTE: When the menu has displayed all the matches that it
 # should (i.e. about 10 items) then we display this to alert the user that
 # more matches are available.
+fieldMenuMore=තවත් ගැළපුම්, දිගටම ලියන්න
 
 # LOCALIZATION NOTE: The command line provides completion for JavaScript
 # commands, however there are times when the scope of what we're completing
@@ -89,6 +95,7 @@ jstypeParseScope=විෂයපථය මඟ හැරුණි
 # is doing JavaScript completion and encounters errors.
 jstypeParseMissing='%S' විශේෂය සොයාගත නොහැක
 jstypeBeginSyntax=කාරක රීති දෝෂය
+jstypeBeginUnterm=නශ්‍ය නොකළ ලිඛිත යෙදීම්
 
 # LOCALIZATION NOTE: This message is displayed if the system for providing
 # JavaScript completions encounters and error it displays this.
@@ -139,9 +146,11 @@ helpManSynopsis=සාරාංශය
 
 # LOCALIZATION NOTE: This message is displayed in the help page if the command
 # has no parameters.
+helpManNone=කිසිවක් නැත
 
 # LOCALIZATION NOTE: This message is displayed in response to the 'help'
 # command when used without a filter, just above the list of known commands.
+helpListAll=පවතින විධානයන්:
 
 # LOCALIZATION NOTE (helpListPrefix, helpListNone): These messages are
 # displayed in response to the 'help <search>' command (i.e. with a search
@@ -173,6 +182,8 @@ subCommands=උප-විධාන
 # strings are used to describe the 'context' command and its 'prefix'
 # parameter. See localization comment for 'connect' for an explanation about
 # 'prefix'.
+contextDesc=විධාන සමූහය මත අවධානය යොමු කරන්න
+contextPrefixDesc=විධාන පෙරනම
 
 # LOCALIZATION NOTE: This message message displayed during the processing of
 # the 'context' command, when the found command is not a parent command.
@@ -180,6 +191,7 @@ subCommands=උප-විධාන
 # LOCALIZATION NOTE (contextReply, contextEmptyReply): These messages are
 # displayed during the processing of the 'context' command, to indicate
 # success or that there is no command prefix.
+contextReply=විධාන පෙරනම ලෙස %S භාවිත කරමින්
 
 # LOCALIZATION NOTE (connectDesc, connectManual, connectPrefixDesc,
 # connectMethodDesc, connectUrlDesc, connectDupReply): These strings describe
@@ -210,9 +222,12 @@ disconnectReply=%S විදහාන ඉවත් කරන ලදි.
 # strings describe the 'global' command and its parameters
 
 # LOCALIZATION NOTE: These strings describe the 'clear' command
+clearDesc=ප්‍රතිදාන ප්‍රදේශය පිරිසිදු කරන්න
 
 # LOCALIZATION NOTE (langDesc, langOutput): These strings describe the 'lang'
 # command and its parameters
+langDesc=වෙනස් භාශා වලින් විධාන ඇතුළත් කරන්න
+langOutput=ඔබ %S භාවිත කරයි
 
 # LOCALIZATION NOTE (prefDesc, prefManual, prefListDesc, prefListManual,
 # prefListSearchDesc, prefListSearchManual, prefShowDesc, prefShowManual,
@@ -273,6 +288,7 @@ introManual=Redisplay the message that is shown to new users until they click th
 # first opens the developer toolbar to explain the command line, and is shown
 # each time it is opened until the user clicks the 'Got it!' button.
 introTextCommands=For a list of commands type
+introTextKeys2=, හෝ පෙන්වන්න//hide විධාන ඉඟි මුද්‍රණය
 introTextF1Escape=F1/Escape
 introTextGo=එය ලැඹුණි!
 
