[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/devtools/gclicommands.properties
+++ b/si/browser/chrome/browser/devtools/gclicommands.properties
@@ -897,13 +897,16 @@ cookieListOutNone=කිසිවක් නැත
 # LOCALIZATION NOTE (cookieListOutSession) The output of the 'cookie list'
 # command uses this string to describe a cookie with an expiry value of '0'
 # that is to say it is a session cookie
+cookieListOutSession=ගවේශක පිටවීමේදී (වාරය)
 
 # LOCALIZATION NOTE (cookieListOutNonePage) The output of the 'cookie list'
 # command uses this string for pages like 'about:blank' which can't contain
 # cookies
+cookieListOutNonePage=මෙම පිටුව සඳහා කුකී හමු නොවිනි
 
 # LOCALIZATION NOTE (cookieListOutNoneHost) The output of the 'cookie list'
 # command uses this string when there are no cookies on a given web page
+cookieListOutNoneHost=%1$S රැඳවීම සඳහා කුකී හමු නොවිනි
 
 # LOCALIZATION NOTE (cookieListOutEdit) A title used in the output from the
 # 'cookie list' command on a button which can be used to edit cookie values
@@ -916,17 +919,21 @@ cookieListOutRemove=ඉවත් කරන්න
 # LOCALIZATION NOTE (cookieRemoveDesc) A very short description of the
 # 'cookie remove' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
+cookieRemoveDesc=කුකි ඉවත් කරන්න
 
 # LOCALIZATION NOTE (cookieRemoveManual) A fuller description of the 'cookie remove'
 # command, displayed when the user asks for help on what it does.
+cookieRemoveManual=කුකී ඉවත් කරන්න, එහි යතුර ලබාදෙමින්
 
 # LOCALIZATION NOTE (cookieRemoveKeyDesc) A very short string to describe the
 # 'key' parameter to the 'cookie remove' command, which is displayed in a dialog
 # when the user is using this command.
+cookieRemoveKeyDesc=ඉවත් කරන කුකී හි යතුර
 
 # LOCALIZATION NOTE (cookieSetDesc) A very short description of the
 # 'cookie set' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
+cookieSetDesc=කුකී සකසන්න
 
 # LOCALIZATION NOTE (cookieSetManual) A fuller description of the 'cookie set'
 # command, displayed when the user asks for help on what it does.
@@ -934,6 +941,7 @@ cookieListOutRemove=ඉවත් කරන්න
 # LOCALIZATION NOTE (cookieSetKeyDesc) A very short string to describe the
 # 'key' parameter to the 'cookie set' command, which is displayed in a dialog
 # when the user is using this command.
+cookieSetKeyDesc=සකසන කුකී හි යතුර
 
 # LOCALIZATION NOTE (cookieSetValueDesc) A very short string to describe the
 # 'value' parameter to the 'cookie set' command, which is displayed in a dialog
@@ -993,10 +1001,12 @@ cookieListOutRemove=ඉවත් කරන්න
 # the 'jsb <doNotPreserveNewlines>' parameter. This string is designed to be
 # shown in a menu alongside the command name, which is why it should be as short
 # as possible.
+jsbDoNotPreserveNewlinesDesc=රේඛා බිඳීම් නොසුරකින්න
 
 # LOCALIZATION NOTE (jsbPreserveNewlinesManual) A fuller description of the
 # 'jsb <jsbPreserveNewlines>' parameter, displayed when the user asks for help
 # on what it does.
+jsbPreserveNewlinesManual=පවතින පේළි බිඳීම් සුරැකිය යුතුද
 
 # LOCALIZATION NOTE (jsbPreserveMaxNewlinesDesc) A very short description of the
 # 'jsb <preserveMaxNewlines>' parameter. This string is designed to be shown
