--- a/pl/suite/chrome/common/places/places.properties
+++ b/pl/suite/chrome/common/places/places.properties
@@ -2,6 +2,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+delete.hostname.true=Usuń historię dla %S
+delete.hostname.false=Usuń historię witryny
+delete.hostname.accesskey=s
+delete.domain.true=Usuń historię dla *.%S
+delete.domain.false=Usuń historię dla domeny
+delete.domain.accesskey=h
+
 load-js-data-url-error=Ze względów bezpieczeństwa adresy URL data: i javascript: nie mogą zostać otwarte z okna historii lub z panelu bocznego.
 noTitle=(brak tytułu)
 
