L10n for: Bug 1101978 Don't overload strings

--- a/pl/suite/chrome/common/notification.properties
+++ b/pl/suite/chrome/common/notification.properties
@@ -16,6 +16,8 @@ carbonfailurepluginsMessage.button.label=Uruchom ponownie w trybie 32-bitowym
 carbonfailurepluginsMessage.button.accesskey=U
 
 missingpluginsMessage.title=Aby wyświetlić pełną zawartość tej strony, potrzebne są dodatkowe wtyczki.
+missingpluginsMessage.button.label=Preferencje
+missingpluginsMessage.button.accesskey=P
 
 blockedpluginsMessage.title=Niektóre wtyczki wymagane do wyświetlenia tej strony zostały zablokowane z przyczyn bezpieczeństwa.
 blockedpluginsMessage.infoButton.label=Szczegóły…
