L10n for: Bug 11039 Filter sent messages

--- a/pl/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/pl/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -250,6 +250,9 @@ copyMessageStart=Kopiowanie wiadomości do folderu %S…
 copyMessageComplete=Zakończono kopiowanie.
 copyMessageFailed=Kopiowanie nie powiodło się.
 
+filterMessageComplete=Filtrowanie zakończone.
+filterMessageFailed=Filtrowanie nie powiodło się.
+
 ## LOCALIZATION NOTE (largeMessageSendWarning):
 ## %S is the message size in user-friendly notation. Do not translate.
 largeMessageSendWarning=Ostrzeżenie! Próbujesz wysłać wiadomość o rozmiarze %S, co może wykroczyć poza dozwolone limity serwera poczty. Czy na pewno kontynuować wysyłanie wiadomości?
@@ -300,3 +303,5 @@ smtpEnterPasswordPromptTitle=Wymagane hasło serwera SMTP
 ## LOCALIZATION NOTE(errorSavingMsg): Do not translate the word %S. It
 ## will be replaced with the name of the folder the message is being saved to.
 errorSavingMsg=Wystąpił błąd podczas zapisywania wiadomości do %S. Czy spróbować ponownie?
+
+errorFilteringMsg=Wiadomość została wysłana i zapisana ale wystąpił błąd podczas stosowania do niej filtrów.
