[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/devtools/app-manager.properties
+++ b/si/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=යෙදුම් කළමණාකරු සහාය ඉදිරියේදී ඉවත් කිරීමට නියමිතව ඇත.  ඔබගේ ව්‍යාපෘතීන් WebIDE වෙතට සංක්‍රමණය කරවා ඇත.
 index.launchWebIDE=WebIDE දියත් කරන්න
 index.readMoreAboutWebIDE=තවදුරටත් කියවන්න
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
