--- a/de/suite/chrome/common/places/places.properties
+++ b/de/suite/chrome/common/places/places.properties
@@ -2,6 +2,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+delete.hostname.true=Chronik für %S löschen
+delete.hostname.false=Chronik für Website löschen
+delete.hostname.accesskey=o
+delete.domain.true=Chronik für *.%S löschen
+delete.domain.false=Chronik für Domain löschen
+delete.domain.accesskey=C
+
 load-js-data-url-error=Aus Sicherheitsgründen können JavaScript- oder Daten-URLs nicht aus Chronik-Fenster oder -Sidebar geladen werden.
 noTitle=(kein Titel)
 
